--- a/counter/index.html
+++ b/counter/index.html
@@ -8,8 +8,25 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>your code goes here</h1>
-    <!-- javascript -->
+
+    <main>
+        <div class="container">
+            <h1>
+              counter
+            </h1>
+            <span id="value">0</span>
+            <div class="button-container">
+                <button type="button" class="btn decrease">decrease</button>
+                <button type="button" class="btn reset">reset</button>
+                <button type="button" class="btn increase">increase</button>
+
+
+              </div>
+        </div>
+    </main>
+
+
+
     <script src="app.js"></script>
   </body>
 </html>
